# plotka

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: compose.rs  error.rs  lib.rs  main.rs  parser.rs  prelude.rs  server.rs  storage.rs
src/parse/: csv.rs  json.rs  mod.rs  record.rs
src/server/: mod.rs  session.rs
src/storage/: deser.rs  mod.rs
